--- a/website/templates/404.html
+++ b/website/templates/404.html
@@ -1,75 +1,17 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Music Events</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
+{% block heading %}
+<h1 class="fs-1 mb-3 fw-bold">Oh no!</h1>
+{% endblock %}
 
-<body class="text-light" style="background-color: #111016">
-    <header class="text-light" style="background-color: #111016">
-        <div class="container">
-            <div class="d-flex align-items-center py-4">
-                <a class="d-flex align-items-center text-decoration-none me-3 text-white" href="./home.html">
-                    <span class="fs-4 fw-bold lh-1 text-white">Music Events</span>
-                </a>
-                <ul class="nav flex-nowrap text-nowrap overflow-auto ms-auto" style="scrollbar-width: thin">
-                    <li class="nav-item">
-                        <a class="nav-link text-white link-info" href="./create.html">Create</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white link-info" href="./history.html">History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white link-info fw-bold" href="#">Sign Out</a>
-                    </li>
-                </ul>
-            </div>
+
+{% block content %}
+<a class="text-light link-info bg-info text-decoration-none" href="{{ url_for('main.index') }}">
+    <div class="card bg-dark border-0">
+        <div class="card-body">
+            <h1 class="">404</h1>
+            <h2 class="fs-5">The page you are looking for doesn't exist! Go back home</h2>
         </div>
-    </header>
-
-    <main>
-        <section id="hero" class="py-5" style="background-color: #1a1a1f">
-            <div class="container">
-                <div class="d-flex flex-column flex-column-reverse flex-md-row">
-                    <h1 class="fs-1 mb-3 fw-bold">Oh no!</h1>
-                </div>
-            </div>
-        </section>
-        <div class="py-5">
-            <div class="container">
-                <p class="fs-5">
-                    
-                </p>
-                <a class="text-light link-info bg-info text-decoration-none" href="./details.html">
-                    <div class="card bg-dark border-0 h-100">
-                        <div class="card-body">
-                            <h1 class="">404</h1>
-                            <h2 class="fs-5">The page you are looking for doesn't exist! Go back home</h2>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </main>
-
-    <footer>
-        <div class="py-5" style="background-color: #1a1a1f">
-            <div class="container">
-                <ul class="nav justify-content-center fs-5">
-                    <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center text-decoration-none text-white link-info"
-                            href="#">
-                            <span>© Music Events</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
-</html>
+    </div>
+</a>
+{% endblock %}
