--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -6,26 +6,76 @@
     <title>IAB207 Assignment 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
 </head>
 
-<body>
+<body class="text-light" style="background-color: #111016">
     <!-- Header -->
-    <header>
-
-        <!-- Navbar -->
-        <nav>
-        </nav>
-
-        {% block header %}
+    <header class="text-light" style="background-color: #111016">
+        {% block alert %}
         {% endblock %}
-
+        <div class="container">
+            <div class="d-flex align-items-center py-4">
+                <a class="d-flex align-items-center text-decoration-none me-3 text-white" href="{{ url_for('main.index') }}">
+                    <span class="fs-4 fw-bold lh-1 text-white">Music Events</span>
+                </a>
+                <ul class="nav flex-nowrap text-nowrap overflow-auto ms-auto" style="scrollbar-width: thin">
+                    {% if current_user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-info" href="{{ url_for('event.create') }}">Create</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-info" href="{{ url_for('main.history') }}">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-info fw-bold" href="{{ url_for('auth.logout') }}">Sign Out</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-info" href="{{ url_for('auth.login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-info fw-bold" href="{{ url_for('auth.register') }}">Register</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
     </header>
 
-    {% block content %}
-    {% endblock %}
+    <main>
+        <section id="hero" class="py-5" style="background-color: #1a1a1f">
+            <div class="container">
+                <div class="d-flex flex-column flex-column-reverse flex-md-row">
+                    <div class="col col-md-5 me-md-5">
+                        {% block heading %}
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <footer class="footer">
+        <div class="py-5">
+            <div class="container">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+    </main>
+
+
+    <footer>
+        <div class="py-5" style="background-color: #1a1a1f">
+            <div class="container">
+                <ul class="nav justify-content-center fs-5">
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center text-decoration-none text-white link-info"
+                            href="{{ url_for('main.index') }}">
+                            <span>© Music Events</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
