--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -1,146 +1,36 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Music Events</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
+{% block heading %}
+<h1 class="fs-1 mb-3 fw-bold">View your booking history</h1>
+{% endblock %}
 
-<body class="text-light" style="background-color: #111016">
-    <header class="text-light" style="background-color: #111016">
-        <div class="container">
-            <div class="d-flex align-items-center py-4">
-                <a class="d-flex align-items-center text-decoration-none me-3 text-white" href="./home.html">
-                    <span class="fs-4 fw-bold lh-1 text-white">Music Events</span>
-                </a>
-                <ul class="nav flex-nowrap text-nowrap overflow-auto ms-auto" style="scrollbar-width: thin">
-                    <li class="nav-item">
-                        <a class="nav-link text-white link-info" href="./create.html">Create</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white link-info" href="./history.html">History</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white link-info fw-bold" href="#">Sign Out</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
 
-    <main>
-        <section id="hero" class="py-5" style="background-color: #1a1a1f">
-            <div class="container">
-                <div class="d-flex flex-column flex-column-reverse flex-md-row">
-                    <div class="col col-md-5 me-md-5">
-                        <h1 class="fs-1 mb-3 fw-bold">View your booking history</h1>
-                    </div>
+{% block content %}
+{% if bookings.first() == None %}
+<h1 class="fs-1 mb-3 fw-bold">No bookings found.
+{% else %}
+<div class="row g-4 row-cols-1 row-cols-sm-2 row-cols-md-3 mb-5">
+    {% for booking in bookings %}
+    {% for event in events %}
+    {% if booking.event_id == event.event_id %}
+    <div class="col">
+        <a class="text-light link-info bg-info text-decoration-none" href="{{url_for('event.view', id=event.event_id)}}">
+            <div class="card bg-dark border-0 h-100">
+                <img class="card-img-top"
+                    src="{{ event.event_image }}"
+                    alt="{{ event.event_name }}" />
+                <div class="card-body">
+                    <h2 class="fs-4">[{{ booking.booking_id }}] {{ event.event_name }}</h2>
+                    <h2 class="fs-5">by {{ event.event_artist }}</h2>
+                    <h2 class="fs-4 text-warning">{{ event.event_status }}</h2>
+                    <h2 class="fs-6">{{ booking.ticket_qty}}x Tickets purchased</h2>
                 </div>
             </div>
-        </section>
-        <div class="py-5">
-            <div class="container">
-                <div class="row g-4 row-cols-1 row-cols-sm-2 row-cols-md-3 mb-5">
-                    
-                    <div class="col">
-                        <a class="text-light link-info bg-info text-decoration-none" href="./details.html">
-                            <div class="card bg-dark border-0 h-100">
-                                <img class="card-img-top"
-                                    src="images/nasx.jpg"
-                                    alt="" />
-                                <div class="card-body">
-                                        <h2 class="fs-4">[#923] Loud and Proud</h2>
-                                        <h2 class="fs-6">by Lil Nas X</h2>
-                                        <h2 class="fs-4 text-warning">CANCELLED</h2>
-                                        <h2 class="fs-6">5 tickets</h2>
-                                        
-                                        <h2 class="fs-6 text-primary">Booked @ 8:01PM 27/09</h2>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col">
-                        <div class="card bg-dark border-0 h-100">
-                            <img class="card-img-top"
-                                src="images/beatles.webp"
-                                alt="" />
-                            <div class="card-body">
-                                <a class="text-light link-info bg-info text-decoration-none" href="./details.html">
-                                    <h2 class="fs-5">Beatles @ Sydney</h2>
-                                    <h2 class="fs-6">#881 13/09/2022 2:40PM UTC+10:00</h2>
-                                    <h2 class="fs-6 text-primary">1x Classic $10</h2>
-                                    <h2 class="fs-6 text-primary">Total: $10</h2>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card bg-dark border-0 h-100">
-                            <img class="card-img-top"
-                                src="images/elon.webp"
-                                alt="" />
-                            <div class="card-body">
-                                <a class="text-light link-info bg-info text-decoration-none" href="./details.html">
-                                    <h2 class="fs-5">Elon @ Brisbane</h2>
-                                    <h2 class="fs-6">#754 12/09/2022 2:44PM UTC+10:00</h2>
-                                    <h2 class="fs-6 text-primary">1x AI $600</h2>
-                                    <h2 class="fs-6 text-primary">Total: $600</h2>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card bg-dark border-0 h-100">
-                            <img class="card-img-top"
-                                src="images/kanye.webp"
-                                alt="" />
-                            <div class="card-body">
-                                <a class="text-light link-info bg-info text-decoration-none" href="./details.html">
-                                    <h2 class="fs-5">Kanye @ Brisbane</h2>
-                                    <h2 class="fs-6">#557 01/08/2022 5:40PM UTC+10:00</h2>
-                                    <h2 class="fs-6 text-primary">2x Bronze $20, 1x Silver $50</h2>
-                                    <h2 class="fs-6 text-primary">Total: $90</h2>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card bg-dark border-0 h-100">
-                            <img class="card-img-top"
-                                src="images/taylor.webp"
-                                alt="" />
-                            <div class="card-body">
-                                <a class="text-light link-info bg-info text-decoration-none" href="./details.html">
-                                    <h2 class="fs-5">Taylor @ Adelaide</h2>
-                                    <h2 class="fs-6">#443 05/07/2022 1:40PM UTC+10:00</h2>
-                                    <h2 class="fs-6 text-primary">2x Bronze $20, 1x Silver $50</h2>
-                                    <h2 class="fs-6 text-primary">Total: $90</h2>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <footer>
-        <div class="py-5" style="background-color: #1a1a1f">
-            <div class="container">
-                <ul class="nav justify-content-center fs-5">
-                    <li class="nav-item">
-                        <a class="nav-link d-flex align-items-center text-decoration-none text-white link-info"
-                            href="#">
-                            <span>© Music Events</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
-</html>
+        </a>
+    </div>
+    {% endif %}
+    {% endfor %}
+    {% endfor %}
+</div>
+{% endif %}
+{% endblock %}
