--- a/website/templates/user.html
+++ b/website/templates/user.html
@@ -1,39 +1,86 @@
-{% include "base.html" %}
+{% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block body %}
 
-<div class="page-header">
-    <h4>{{heading}}</h4>
-</div>
-
-
-
+{% block alert %}
 <div class="container-fluid">
     {% with messages = get_flashed_messages() %}
     {% if messages %}
     {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert" aria-label="close">x</button>
+    <div class="alert alert-dark alert-dismissible fade show mt-3" role="alert">
         {{message}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endfor %}
     {% endif %}
     {% endwith %}
+</div>
+{% endblock %}
 
+{% block heading %}
+
+<div class="page-header">
+    <h1 class="fs-1 mb-3 fw-bold">{{heading}}</h1>
 </div>
 
 
+{% endblock %}
+{% block content %}
 
 <!-- Form rendering is simple and easy if using bootstrap -->
-<div class="col-md-6">
-    {{wtf.render_form(form)}}
-</div>
+
+<!-- {{wtf.quick_form(form, extra_classes="fs-5", id="submit") }} -->
+
 
 <!-- When you have login form, then do show the user a link to register -->
 {% if heading|lower =='login' %}
-<div class="col-md-4">
-    <p>New user? <a href="{{ url_for('register') }}">Click here to register</a>.</p>
-</div>
-{% endif %}
+<p class="text-center">New here? 
+    <a class="text-decoration-none link-info" href="{{ url_for('auth.register') }}">Register here</a>.
+</p>
 
+<form class="form form-horizontal" method="post" role="form">
+    {{ form.hidden_tag() }}
+    {{ wtf.form_errors(form, hiddens="only") }}
+
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.username) }}
+    </div>
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.password) }}
+    </div>
+    <div class="my-4">
+        {{wtf.form_field(form.submit, class="btn btn-success w-100") }}
+    </div>
+</form>
+{% else %}
+<p class="text-center">Already have an account? 
+    <a class="text-decoration-none link-info" href="{{ url_for('auth.login') }}">Login here</a>.
+</p>
+
+<form class="form form-horizontal" method="post" role="form">
+    {{ form.hidden_tag() }}
+    {{ wtf.form_errors(form, hiddens="only") }}
+
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.email) }}
+    </div>
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.username) }}
+    </div>
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.phone) }}
+    </div>
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.address) }}
+    </div>
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.password) }}
+    </div>
+    <div class="mb-3 fs-5">
+        {{wtf.form_field(form.confirm) }}
+    </div>
+    <div class="my-4">
+        {{wtf.form_field(form.submit, class="btn btn-success w-100") }}
+    </div>
+</form>
+{% endif %}
 {% endblock %}
